# simplecalc

./: .gitignore  CMakeLists.txt  Makefile_old  README  TODO  prepbuild  prepbuild.bat  simplecalc43_win.cbp  simplecalc43_win.layout
CMake/: FindParsers.cmake
doc/: simplecalc.1
include/tclap/: Arg.h  ArgException.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h
scripts/: CMakeLists.txt  calcs  calctest  init  rotate.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  calc.cpp  eq.cpp  util.h
src/interpreter/: CMakeLists.txt  basicexpr.cpp  basicexpr.h  cfunction.cpp  cfunction.h  context.cpp  context.h  customfunction.cpp  customfunction.h  driver.cpp  driver.h  expression.h  function.h  functionexpr.cpp  functionexpr.h  parenthesisexpr.cpp  parenthesisexpr.h  parser.yy  scanner.ll  terminalexpr.cpp  terminalexpr.h  terminterpreter.h  variableexpr.cpp  variableexpr.h
src/interpreter/context/: cfunction.h  context.cpp  context.h  customfunction.cpp  customfunction.h  function.cpp  function.h  lookupexception.cpp  lookupexception.h
src/interpreter/expression/: CMakeLists.txt  basicexpr.cpp  expression.cpp  functionexpr.cpp  functionexpr.h  parenthesisexpr.cpp  parenthesisexpr.h  terminalexpr.cpp  variableexpr.cpp  variableexpr.h
src/util/: CMakeLists.txt  util.cpp  util.h
